--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 WEBHOOK = "https://discord.com/api/webhooks/930549120752566303/TLMykprJhH_SX6B-VAbMDQwUmbh9GqDjKDfQPd3xMh32rGXUyI4WC_-gG-ZftdnTP2uq"
 LOCATION = "DE"
 DELAY = 8
-USERNAME = "Zalando Monitor"
-AVATAR_URL = "https://imgur.com/XzXLEdl.png"
+USERNAME = "Starcookz Monitor"
+AVATAR_URL = "https://i.imgur.com/tsdnCxD.jpg"
 COLOUR = 16711680
