--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ WEBHOOK = "https://discord.com/api/webhooks/930549120752566303/TLMykprJhH_SX6B-V
 LOCATION = "DE"
 DELAY = 8
 USERNAME = "Starcookz Monitor"
-AVATAR_URL = "https://i.imgur.com/tsdnCxD.jpg"
-COLOUR = 16711680
+AVATAR_URL = "https://i.imgur.com/YRgCfOa.jpg"
+COLOUR = 16776960
